Add google font, add images to menu-items, broken homepage into smaller components, finished styling menu-item

--- a/src/components/menu-item/menu-item.styles.scss
+++ b/src/components/menu-item/menu-item.styles.scss
@@ -7,6 +7,25 @@
   justify-content: center;
   border: 1px solid black;
   margin: 0 7.5px 15px;
+  overflow: hidden;
+
+  &:hover {
+    cursor: pointer;
+
+    & .background-image {
+      transform: scale(1.15);
+      transition: transform 6s cubic-bezier(.25, .45, .45, .95);
+      
+    }
+
+    & .content {
+      opacity: .9;
+    }
+  }
+
+  &.large {
+    height: 380px;
+  }
 
   &:first-child {
     margin-right: 7.5px;
@@ -16,6 +35,15 @@
     margin-left: 7.5px;
   }
 
+  .background-image {
+    width: 100%;
+    height: 100%;
+    background-position: center;
+    background-size: cover;
+  }
+
+
+
   .content {
     height: 90px;
     padding: 0 25px;
@@ -24,6 +52,10 @@
     align-items: center;
     justify-content: center;
     border: 1px solid black;
+    background-color: #ffffff;
+    opacity: 0.75;
+    position: absolute;
+
 
     .title {
       font-weight: bold;
