--- a/src/components/custom-button/custom-button.styles.scss
+++ b/src/components/custom-button/custom-button.styles.scss
@@ -14,11 +14,22 @@
     border: none;
     cursor: pointer;
     text-align: center;
+    margin: 15px 0;
   
     &:hover {
       background-color: white;
       color: black;
       border: 1px solid black;
+    }
+
+    &.google-sign-in{
+      background-color: #4285F4;
+      color: white;
+
+      &:hover {
+        background-color: #357ae8;
+        border: none;
+      }
     }
   }
   
