--- a/src/components/collection-item/collection-item.styles.scss
+++ b/src/components/collection-item/collection-item.styles.scss
@@ -5,6 +5,11 @@
     height: 350px;
     align-items: center;
     position: relative;
+    @media screen and ( max-width: 800px ) {
+      width: 40vw;
+
+       }
+
   
     .image {
       width: 100%;
@@ -20,6 +25,13 @@
       position: absolute;
       top: 255px;
       display: none;
+
+      @media screen and ( max-width: 800px ) {
+        display: block;
+        opacity: 0.9;
+        min-width: unset;
+        padding: 0 10px 0 10px
+         }
     }
 
     &:hover {
@@ -31,6 +43,7 @@
         opacity: 0.85;
         display: flex;
       }
+
     }
   
     .collection-footer {
