--- a/src/components/form-input/form-input.styles.scss
+++ b/src/components/form-input/form-input.styles.scss
@@ -11,6 +11,11 @@ $main-color: black;
   position: relative;
   margin: 45px 0;
 
+  @media screen and ( max-width: 800px ) {
+    max-width: 90vw;
+
+     }
+
   .form-input {
     background: none;
     background-color: white;
@@ -23,6 +28,10 @@ $main-color: black;
     border-radius: 0;
     border-bottom: 1px solid $sub-color;
     margin: 25px 0;
+    @media screen and ( max-width: 800px ) {
+      max-width: 80vw;
+
+       }
 
     &:focus {
       outline: none;
