--- a/src/components/menu-item/menu-item.styles.scss
+++ b/src/components/menu-item/menu-item.styles.scss
@@ -8,6 +8,13 @@
   border: 1px solid black;
   margin: 0 7.5px 15px;
   overflow: hidden;
+  position: relative;
+
+  @media screen and ( max-width: 800px ) {
+    height: 200px;
+}
+
+  
 
   &:hover {
     cursor: pointer;
@@ -25,6 +32,10 @@
 
   &.large {
     height: 380px;
+
+    @media screen and ( max-width: 800px ) {
+      height: 200px;
+  }
   }
 
   &:first-child {
@@ -34,6 +45,10 @@
   &:last-child {
     margin-left: 7.5px;
   }
+
+  
+
+  
 
   .background-image {
     width: 100%;
@@ -46,14 +61,16 @@
 
   .content {
     height: 90px;
-    padding: 0 25px;
+    padding: 0px 25px;
     display: flex;
     flex-direction: column;
+    -webkit-box-align: center;
     align-items: center;
+    -webkit-box-pack: center;
     justify-content: center;
     border: 1px solid black;
-    background-color: #ffffff;
-    opacity: 0.75;
+    background-color: white;
+    opacity: 0.7;
     position: absolute;
 
 
@@ -62,6 +79,7 @@
       margin-bottom: 6px;
       font-size: 22px;
       color: #4a4a4a;
+      word-wrap: break-word;
     }
 
     .subtitle {
