--- a/src/components/sign-in/sign-in.styles.scss
+++ b/src/components/sign-in/sign-in.styles.scss
@@ -12,5 +12,9 @@
         display: flex;
         flex-direction: column;
         justify-content: space-between;
+        @media screen and ( max-width: 800px ) {
+            max-width: 80vw;
+      
+             }
     }
 }
