--- a/src/pages/collection/collection.styles.scss
+++ b/src/pages/collection/collection.styles.scss
@@ -1,6 +1,8 @@
 .collection-page {
     display: flex;
     flex-direction: column;
+
+    
   
     .title {
       font-size: 38px;
@@ -11,9 +13,17 @@
       display: grid;
       grid-template-columns: 1fr 1fr 1fr 1fr;
       grid-gap: 10px;
+
+      @media screen and ( max-width: 800px ) {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-gap: 15px;
+  
+         }
   
       & .collection-item {
         margin-bottom: 30px;
       }
     }
+    
   }
